verify-otp api complete
