# Backend/uasam/users/user/controllers/signup_controller.go
@@ -36,9 +36,9 @@ func NewSignUpController(userService *userService.UserService, log *logger.Logge
 func (snc *SignUpController) SignUpInitHandler(c *gin.Context) {
 	var signUpInitRequest models.SignUpInitRequest
 	if err := json.NewDecoder(c.Request.Body).Decode(&signUpInitRequest); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"status":             0,
-			"status_description": "Invalid request payload",
+		c.JSON(http.StatusBadRequest, models.SignUpInitResponse{
+			Status:            0,
+			StatusDescription: "Invalid request payload",
 		})
 		return
 	}
@@ -75,6 +75,64 @@ func (snc *SignUpController) SignUpInitHandler(c *gin.Context) {
 	})
 }
 
-func (snc *SignUpController) VerifyOTPHandler(c *gin.Context) {
+// SignUpVerifyOTPHandler verifies the OTP sent to the user and creates the user account.
+// @Summary      Verify OTP and Sign Up User
+// @Description  Verifies the OTP and creates the user account if valid.
+// @Tags         User
+// @Accept       json
+// @Produce      json
+// @Param        request  body      models.SignUpVerifyOTPRequest  true  "Verify OTP Request"
+// @Success      201      {object}  models.SignUpVerifyOTPResponse
+// @Failure      400      {object}  models.SignUpVerifyOTPResponse  "Invalid request payload"
+// @Failure      401      {object}  models.SignUpVerifyOTPResponse  "Wrong OTP"
+// @Failure      500      {object}  models.SignUpVerifyOTPResponse       "Server Error"
+// @Router       /v1/user/sign-up/verify-otp/ [post]
+func (snc *SignUpController) SignUpVerifyOTPHandler(c *gin.Context) {
+	var signUpVerifyOTPRequest models.SignUpVerifyOTPRequest
+	if err := json.NewDecoder(c.Request.Body).Decode(&signUpVerifyOTPRequest); err != nil {
+		c.JSON(http.StatusBadRequest, models.SignUpVerifyOTPResponse{
+			Status:            0,
+			StatusDescription: "Invalid request payload",
+		})
+		return
+	}
 
+	userExists, err := snc.userService.IfUserExists(signUpVerifyOTPRequest.EmailID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.SignUpVerifyOTPResponse{
+			Status:            0,
+			StatusDescription: "Server Error",
+		})
+		return
+	}
+	if userExists {
+		c.JSON(http.StatusBadRequest, models.SignUpVerifyOTPResponse{
+			Status:            -1,
+			StatusDescription: "User with Email Already Exists",
+		})
+		return
+	}
+
+	userResponseObject, generatedUserAccessToken, status, err := snc.userService.SignUpVerifyOTPHandler(&signUpVerifyOTPRequest)
+	if status == -1 {
+		c.JSON(http.StatusUnauthorized, models.SignUpVerifyOTPResponse{
+			Status:            -1,
+			StatusDescription: "Wrong OTP",
+		})
+		return
+	}
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.SignUpVerifyOTPResponse{
+			Status:            0,
+			StatusDescription: "Server Error",
+		})
+		return
+	}
+
+	c.JSON(http.StatusCreated, &models.SignUpVerifyOTPResponse{
+		Status:            1,
+		StatusDescription: "user created",
+		User:              *userResponseObject,
+		AccessToken:       generatedUserAccessToken,
+	})
 }
